Scrollbar fixed

--- a/src/components/ProjectModal.css
+++ b/src/components/ProjectModal.css
@@ -9,4 +9,10 @@
     -webkit-backdrop-filter: blur( 14.0px );
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
+    max-height: 90vh;
+    max-width: 95vw;
+}
+
+.break-word{
+    word-wrap: break-word;
 }
